CTPA-298 new swagger spec and endpoint returns 201
